--- a/journal/201811.md
+++ b/journal/201811.md
@@ -1,125 +1,85 @@
-# {DRAFT} Decred Journal – November 2018
+{DRAFT} Decred Journal – November 2018
+{alt text}
 
-![{alt text}](../img/{file.jpg} "{hover text}")
+November was an exciting and productive month for the Decred Project. The community began to reap the benefits of Politeia development with successful live proposal voting. Stakeholders collectively voiced key steering decisions regarding the future of contractor management, public relations, and research all from the comfort of their Decred wallet of choice (Decrcediton or dcrcli).
 
-November was an exciting and productive month for the Decred Project. The community began to reap the benefits of Politeia development with successful live proposal voting. Stakeholders collectively voiced key steering decisions regarding the future of contractor management, public relations, and research all from the comfort of their Decred wallet of choice (Decrediton or dcrcli {dcrcli?} {mention politeiavoter?}).
+Decred project organically prepared to scale to support stakeholder vision in November - additional companies, individuals and firms joined the Decred ecosystem while some long term contributors self-organized according to interests and abilities.
 
-Decred project organically prepared to scale to support stakeholder vision in November - additional companies {any new companies?}, individuals and firms {are firms and companies different?} joined the Decred ecosystem while some long term contributors self-organized according to interests and abilities.
+Amidst the excitement, growth and change in the community, the development continued in earnest as both desktop and mobile wallet release candidates show promise of continuing a tradition of stability and innovation.
 
-Amidst the excitement, growth and change in the community, the development continued in earnest as both desktop and mobile wallet release candidates {were any RCs released or announced?} show promise of continuing a tradition of stability and innovation.
-
-## Development
-
+Development
 {per-project summary, drop items without updates}
 
-[dcrd](https://github.com/decred/dcrd):
+dcrd:
 
-* Reversed UTXO set semantics is merged https://github.com/decred/dcrd/pull/1471
-* Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster.
+Reversed UTXO set semantics is merged https://github.com/decred/dcrd/pull/1471
+Database migration for the UTXO set semantics reversal https://github.com/decred/dcrd/pull/1520 (big change, more testing is welcome {remove if merged}). A nice side effect if this change is that full block tests run 40% faster.
+dcrwallet:
 
-[dcrwallet](https://github.com/decred/dcrwallet):
+Fixed address watching issues on heavily used wallets https://github.com/decred/dcrwallet/pull/1320
+Fixed missed and double spent transactions in some cases https://github.com/decred/dcrwallet/pull/1321
+Decrediton:
 
-* Fixed address watching issues on heavily used wallets https://github.com/decred/dcrwallet/pull/1320
-* Fixed missed and double spent transactions in some cases https://github.com/decred/dcrwallet/pull/1321
-* Improved locked balance calculation https://github.com/decred/dcrwallet/pull/1330
+Updated to Electron 3 https://github.com/decred/decrediton/pull/1777
+Added display of Treasury balance https://github.com/decred/decrediton/pull/1764
+Improved startup performance for large wallets https://github.com/decred/decrediton/pull/1727
+ticketbuyer v2 https://github.com/decred/decrediton/pull/1744
+Politeia:
 
-[Decrediton](https://github.com/decred/decrediton):
-
-* Updated to Electron 3 https://github.com/decred/decrediton/pull/1777
-* Added display of Treasury balance https://github.com/decred/decrediton/pull/1764
-* Improved startup performance for large wallets https://github.com/decred/decrediton/pull/1727
-* ticketbuyer v2 https://github.com/decred/decrediton/pull/1744
-* Design improvements
-* Proposal loading optimizations https://github.com/decred/decrediton/pull/1825
-
-[Politeia](https://github.com/decred/politeia):
-
-* politeiavoter privacy improvements
-* feature: highlight new comments {wait for merge or move to Dec} https://github.com/decred/politeiagui/pull/897
-* comment score calculation moved to politeiawww https://github.com/decred/politeia/pull/610
-* https://github.com/decred/politeiagui/pull/899
-* https://github.com/decred/politeia/pull/613
-* tightening security https://github.com/decred/politeiagui/issues/917 {wait for pr}
-* email notifications for comments https://github.com/decred/politeiagui/pull/919
-
+politeiavoter privacy improvements
+feature: highlight new comments {wait for merge or move to Dec} https://github.com/decred/politeiagui/pull/897
+comment score calculation moved to politeiawww https://github.com/decred/politeia/pull/610
 A lot of the big enhancements over the next couple of months are focused on improving performance.
 
-[Android](https://github.com/decred/dcrandroid):
+Android:
 
-* Added QR Code sharing option for compatibility with other apps.
-* Graphics and logos updated to match latest Decred design elements.
-* New feature to transfer funds between accounts in the same wallet via dropdown selection.
-* Hidden account feature with balance deducted from main screen added.
+Development of the Decred Mobile Wallet for Android by Raedah Group took a leap forward this month with an alpha release for early adopters available on the Google Play store: https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet.  The Play Store version includes advanced QR code usage for compatibility with other applications in response to the community needs for payments and trades on the go.  Another community sourced innovation successfully implemented by Raedah Group is the "Hidden Account" feature: https://github.com/decred/dcrandroid/issues/175.  Hidden accounts allow mobile users to keep funds in their mobile wallet which will not be displayed on the main screen balance total.  Community members buying and selling Decred at local meetups are excited for the added privacy and security this feature offers.  Fund transfer between accounts also got an upgrade this month with simple dropdown selection ensuring balance changes are quick and easy: https://github.com/decred/dcrandroid/issues/119.
 
-[iOS](https://github.com/raedahgroup/dcrios):
+iOS:
 
-* QR Code scanning enabled for transactions.
-* Top to bottom redesign to match latest design elements.
-* Full transaction details added to match detail level of desktop wallet.
+QR Code scanning enabled for transactions.
+Top to bottom redesign to match latest design elements.
+Full transaction details added to match detail level of desktop wallet.
+Trezor: Model T firmware version 2.0.9 was released with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
 
-Trezor: Model T firmware version 2.0.9 was [released](https://blog.trezor.io/firmware-updates-2-0-9-and-1-7-1-developed-by-the-community-for-the-community-c4b965741ca3) with Decred support. Cheers @matheusd for making it happen! Now our Decrediton developers can work on the integration.
+dcrdata:
 
-[dcrdata](https://github.com/decred/dcrdata):
+Check if "Graphical Block Display" is complete by month end, tests just launched.
+Check work on OPRETURN and "Side Chain" forward compatibility.
+{what is pub/sub event hub #806?}
+@gozart is refactoring the app into es6 modules #805
+Ticket splitting:
 
-* Check if "Graphical Block Display" is complete by month end, tests just launched.
-* Check work on OPRETURN and "Side Chain" forward compatibility.
-* {what is pub/sub event hub #806?}
-* @gozart is refactoring the app into es6 modules #805
-* large refactoring by @gozart: css to scss and more https://github.com/decred/dcrdata/pull/839
+New ticket splitting guide released (EN): https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
+New ticket splitting video released (PT w/ EN subs): https://www.youtube.com/watch?v=3RGoUQK0g24&feature=share
+Ticket splitting volume increased {needs volume numbers pulled for verfication}
+Update to allow ticket splitting with SPV wallet (changing uxtos lookup from dcrd to dcrdata): https://github.com/matheusd/dcr-split-ticket-matcher/issues/29
+docs:
 
-[dcrstakepool](https://github.com/decred/dcrstakepool):
+Rename stake "mining" to "voting", "stakepool" to "VSP" {link}
+Glossary, lots of work, many people shared feedback
+Terminology: rename dev fund to "Decred Treasury" https://github.com/decred/dcrdocs/pull/690
+New page Navigating Politeia Data {link}
+decred.org:
 
-Privacy improvements
+Rename stake "mining" to "voting", "stakepool" to "VSP" https://github.com/decred/dcrweb/pull/435
+Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. (chart)
 
-* work started to replace Google reCAPTCHA with a self-hosted captcha to avoid stakeholder fingerprinting, testing help welcome https://github.com/decred/dcrstakepool/pull/281
-* self-host charting library to avoid hitting Cloudflare https://github.com/decred/dcrstakepool/pull/283
-
-And some general love: links now point to dcrdata explorer, readme updated.
-
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher):
-
-* New ticket splitting guide released (EN): https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
-* New ticket splitting video released (PT w/ EN subs): https://www.youtube.com/watch?v=3RGoUQK0g24&feature=share
-* Ticket splitting volume increased {needs volume numbers pulled for verfication}
-* Update to allow ticket splitting with SPV wallet (changing uxtos lookup from dcrd to dcrdata): https://github.com/matheusd/dcr-split-ticket-matcher/issues/29
-
-design:
-
-* https://medium.com/@firethought/base-iconset18-motion-pack-readme-a96f96e868
-
-[docs](https://github.com/decred/dcrdocs):
-
-* Rename stake "mining" to "voting", "stakepool" to "VSP" {link}
-* [Glossary](https://github.com/decred/dcrdocs/pull/675), a huge effort by @s_ben and many people who shared feedback.
-* Terminology: rename dev fund to "Decred Treasury" https://github.com/decred/dcrdocs/pull/690
-* New page Navigating Politeia Data {link}
-
-[decred.org](https://github.com/decred/dcrweb):
-
-* Rename stake "mining" to "voting", "stakepool" to "VSP" https://github.com/decred/dcrweb/pull/435
-
-Dev activity stats for {month}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
-
-## People
-
+People
 Warm welcome to new people contributing for the first time:
 
-* [logicminds](https://github.com/decred/dcrd/commits?author=logicminds) (dcrd, _missed in Oct issue_)
-* [@itswisdomagain](https://github.com/decred/dcrdata/commits?author=itswisdomagain) (dcrdata)
-* [wallclockbuilder](https://github.com/decred/politeiagui/commits?author=wallclockbuilder) (politeiagui) {CONFIRM}
-* [@sef](https://github.com/decred/dcrwallet/commits?author=sefbkn) {CONFIRM}
-* @30000fps (design) {clarify}
-
+logicminds (dcrd, missed in Oct issue)
+@itswisdomagain (dcrdata)
+wallclockbuilder (politeiagui) {CONFIRM}
+@sef {CONFIRM}
+@30000fps (design) {clarify}
 Congratulations to 4 new contributors listed on decred.org https://github.com/decred/dcrweb/pull/444 {names}
 
 {new contractor companies, updates from existing ones}
 
-{interviews
-https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordinary_an_interview/
-}
+{interviews https://www.reddit.com/r/decred/comments/9ve9ie/decred_intriguing_and_extraordinary_an_interview/ }
 
-## Governance
-
+Governance
 {recap of decision-making activity, including new proposals, changes to proposals, voting, discussions, pre-proposal drafts, etc}
 
 Part of November was reported in the previous issue due to late release.
@@ -128,8 +88,7 @@ Part of November was reported in the previous issue due to late release.
 
 Low quality proposals cluttering Politeia were disussed in depth and multiple ideas were suggested. @richardred gave a nice overview of this in Politeia Digest #4.
 
-## Network
-
+Network
 Hashrate: {start, end, low, high, variation; pool distribution}
 
 Staking: {30-day average tix price, low, high, locked DCR million and % of avail supply}
@@ -140,232 +99,193 @@ Nodes: {node counts, version distribution}
 
 {any interesting events in the network}
 
-## Mining
+Mining
+The Whatsminer D1 turned out to be 48 TH/s, 9% up from expected 44 TH/s. The price is $4,850 from Pangolin.
 
-The Whatsminer D1 [turned out](https://twitter.com/Pangolinminer/status/1061521332498624512) to be 48 TH/s, 9% up from expected 44 TH/s. The price is $4,850 [from Pangolin](https://pangolinminer.com/product/whatsminer-dcr-with-psu-shipout-on-dec-5/).
+D1 price bump
 
-D1 hashrate and price bump:
-
-* https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/e9mcfnf/
-* https://bitcointalk.org/index.php?topic=2345436.msg47855662#msg47855662
-
-Bitmain announced [Antminer DR5](https://shop.bitmain.com.cn/product/detail?pid=0002018111918225889369SR3N9s0646) with 34 TH/s at 1800 W, price CNY 19,000 (USD 2750), shipping late December.
-
-## Integrations
-
+https://www.reddit.com/r/decred/comments/9fdz9d/psa_do_not_purchase_the_whatsminer_44th_decred/e9mcfnf/
+https://bitcointalk.org/index.php?topic=2345436.msg47855662#msg47855662
+Integrations
 {new items of infrastructure or news from existing ones}
 
 Exchange integrations:
 
-* Bitqist
-  * https://www.reddit.com/r/decred/comments/9y5dru/you_can_now_instantly_exchange_decred_on_bitqist/
-  * https://bitqist.com/exchange/decred
-  * Dutch https://support.bitqist.com/hc/en-us/articles/360003566512-About-Us
-* Kaiserex launched officially launched an OTC desk after doing OTC since 2015
-  * https://twitter.com/kaiserexcom/status/1064494181224206336
-  * https://www.kaiserex.com/kaiserex-otc-desk/
-  * min trade suze 50k eur
-
+Bitqist
+https://www.reddit.com/r/decred/comments/9y5dru/you_can_now_instantly_exchange_decred_on_bitqist/
+https://bitqist.com/exchange/decred
+Dutch https://support.bitqist.com/hc/en-us/articles/360003566512-About-Us
+Kaiserex launched officially launched an OTC desk after doing OTC since 2015
+https://twitter.com/kaiserexcom/status/1064494181224206336
+https://www.kaiserex.com/kaiserex-otc-desk/
+min trade suze 50k eur
 {OTC desks}
 
 {payment processors}
 
 {wallets}
 
-## Adoption
-
+Adoption
 New merchants:
 
-* Flubit
-  * https://flubit.com/
-  * https://twitter.com/monetaryunit/status/1062127668769050626
-  * {verify: look for statement from flubit}
-  * {what is monetaryunit and how is it related? https://blog.flubit.com/pay-crypto-flubit-com/}
-  * https://www.businesswire.com/news/home/20181108005043/en/Crypto-Coins-Drive-Xmas-Strategy-Largest-eShop
-
+Flubit
+https://flubit.com/
+https://twitter.com/monetaryunit/status/1062127668769050626
+{verify: look for statement from flubit}
+{what is monetaryunit and how is it related? https://blog.flubit.com/pay-crypto-flubit-com/}
+https://www.businesswire.com/news/home/20181108005043/en/Crypto-Coins-Drive-Xmas-Strategy-Largest-eShop
 {applications of Decred blockchain and related projects: Politeia, atomicswap}
 
 {investment adoption}
 
-## Outreach
-
+Outreach
 https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
 
 ^ received a ton of feedback in #marketing showing the power and skill of our writers https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$1542337694484551cyyyn:matrix.org
 
 {overview of outreach/communications/marketing activity for past month and any short-term plans}
 
-Targeted advertising report for {month} was posted by @{}. {short recap}. Read more [here]({link}).
+Targeted advertising report for {month} was posted by @{}. {short recap}. Read more here.
 
-## Events
-
+Events
 Attended:
 
-* {}
-
+{}
 Upcoming:
 
-* {}
-
+{}
 {announcements from events people}
 
-## Media
-
+Media
 {community efforts: Decred Assembly, websites, etc}
 
 {ratings news}
 
 Featured articles:
 
-* {1007} Blockchain forks and chain splits: why we should avoid them by @Haon ([medium](https://blog.goodaudience.com/blockchain-forks-and-chain-splits-why-we-should-avoid-them-f54c693a90f1))
-* {1105} https://www.coinbureau.com/interview/marco-peereboom-decred/
-* {1109} https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
-* {1115} https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
-* {1115} https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e
-* {1117} https://medium.com/decred/dcr-ticket-splitting-all-you-need-to-know-b8edc6b65db3
-
+{1007} Blockchain forks and chain splits: why we should avoid them by @Haon (medium)
+{1105} https://www.coinbureau.com/interview/marco-peereboom-decred/
+{1109} https://www.reddit.com/r/decred/comments/9vhpby/decred_ticket_splitting_overview/
+{1115} https://medium.com/@dlefebvr/pr-in-politeia-process-progress-and-pitching-in-d88771183dd4
+{1115} https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e
 Articles:
 
-* {1103} https://coiniq.com/decred-review/
-* {1112} https://medium.com/@info_5576/staking-coins-part-3-decred-83d73f29038d
-* {1122} https://captainaltcoin.com/smaller-pow-coins-are-in-constant-danger-of-51-attacks-decred-dcr-governance-model-is-the-solution/
-
-There were more articles on various websites, but we only list a selected few. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
-
+{1103} https://coiniq.com/decred-review/
+{1112} https://medium.com/@info_5576/staking-coins-part-3-decred-83d73f29038d
 Translations:
 
-* @zubairzia0's "Blockchain governance: how Decred iterates upon Bitcoin" ([original](https://medium.com/decred/blockchain-governance-how-decred-iterates-upon-bitcoin-3cc7030c655e)) [in Chinese](https://medium.com/@guang.dcr/%E8%AF%91%E6%96%87-%E5%8C%BA%E5%9D%97%E9%93%BE%E6%B2%BB%E7%90%86-decred%E5%A6%82%E4%BD%95%E8%BF%AD%E4%BB%A3%E6%AF%94%E7%89%B9%E5%B8%81-53f434b26105) by @guang
-* @thedecreddigest's "Decred: Where did it all begin?" [in Spanish](https://medium.com/@decred_es/decred-d%C3%B3nde-comenz%C3%B3-todo-767092c90a3e) by @elian
-* https://medium.com/@decred_es/c%C3%B3mo-ser-contratista-en-decred-d0f05386f799
-* https://medium.com/decred-russia/decred-journal-%D0%BE%D0%BA%D1%82%D1%8F%D0%B1%D1%80%D1%8C-2018-1eeffc65344c by @DZ
-
+@zubairzia0's "Blockchain governance: how Decred iterates upon Bitcoin" (original) in Chinese by @guang
+@thedecreddigest's "Decred: Where did it all begin?" in Spanish by @elian
 Videos:
 
-* {1105} Decred Semanal 29/10 - 04/11 (Politeia, Votações, Ditto (Marketing Internacional, Exchange) ([youtube](https://www.youtube.com/watch?v=tIvCFk1Prck))
-* {1105} https://www.youtube.com/watch?v=MgtBRlAfu2k
-* {1106} Decred im Coincheck - Zahlen, Daten und Fakten ([youtube](https://www.youtube.com/watch?v=mHpqDpSd0Fs))
-* {1109} Politeia, como funciona Os desenvolvedores Fernando e Tiago Alves explicam ([youtube](https://www.youtube.com/watch?v=usWrs9B2Rm4), featuring @Tiago Alves and @fernandoabolafio)
-
+{1105} Decred Semanal 29/10 - 04/11 (Politeia, Votações, Ditto (Marketing Internacional, Exchange) (youtube)
+{1105} https://www.youtube.com/watch?v=MgtBRlAfu2k
+{1106} Decred im Coincheck - Zahlen, Daten und Fakten (youtube)
+{1109} Politeia, como funciona Os desenvolvedores Fernando e Tiago Alves explicam (youtube, featuring @Tiago Alves and @fernandoabolafio)
 Audio:
 
-* {}
-
-## Community Discussions
-
+{}
+Community Discussions
 Community stats:
 
-* Twitter followers {} (+{})
-* Reddit subscribers {} (+{})
-* Matrix users {} (+{})
-* Slack users {} (+{})
-* YouTube subscribers {} (+{})
-* Facebook {} (+{}) followers and {} (+{}) likes
-* LinkedIn followers: {} (+{})
-* GitHub {} (+{}) stars and {} (+{}) forks of dcrd repository
-
+Twitter followers {} (+{})
+Reddit subscribers {} (+{})
+Matrix users {} (+{})
+Slack users {} (+{})
+YouTube subscribers {} (+{})
+Facebook {} (+{}) followers and {} (+{}) likes
+LinkedIn followers: {} (+{})
+GitHub {} (+{}) stars and {} (+{}) forks of dcrd repository
 Comm systems news:
 
-* New #research room
-* Bridge interruptions led to some messages not delivered from Slack to Matrix
-
+New #research room
+Bridge interruptions led to some messages not delivered from Slack to Matrix
 {selected discussed topics, as bullet list or one paragraph per topic}
 
 Twitter:
 
-* a poll whether open Politeia voting is a good process, more of the beloved plutocracy thing https://twitter.com/KyleSamani/status/1062382292860059648
-* Decred vs Tezos governance systems https://twitter.com/spencernoon/status/1062482562482868224
-
+a poll whether open Politeia voting is a good process, more of the beloved plutocracy thing https://twitter.com/KyleSamani/status/1062382292860059648
+Decred vs Tezos governance systems https://twitter.com/spencernoon/status/1062482562482868224
 Reddit: {interesting threads}
 
-Chat index was omitted from this issue. The plan is to replace it with a live document.
+Chats: {interesting convos}
 
-## Markets
-
+Markets
 {markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
 Nov 14-15 BTC drop, most top 100 cryptoassets lost 10-20% together with the BTC dive to 5400 USDT / 5200 USD. This happened just a day before the BCH split.
 
-The Media [believes](https://www.bloomberg.com/news/articles/2018-11-16/crypto-winter-comes-early-as-bitcoin-slide-spurs-viability-fears) the BTC dump was sparked by some pump for Bitcoin Cash fork, citing fear, uncertainty and doubt of some guys.
+The Media believes the BTC dump was sparked by some pump for Bitcoin Cash fork, citing fear, uncertainty and doubt of some guys.
 
 Nov 19-20 bloody day, BTC down to $4300 {right?}, DCR down to $22.
 
-## Relevant External
-
+Relevant External
 {PoW, ASIC resistance, tech}
 
-Nvidia [reported](https://cointelegraph.com/news/nvidia-q3-results-reveal-crypto-hangover-due-to-disappearance-of-miner-sales) a drop in GPU sales for mining. This must have nothing to do with Ethereum, Zcash and others receiving ASICs for their GPU-oriented mining algorithms, but rather "it is really the canary in the coal mine for Bitcoin and other cryptocurrencies" per [the experts](https://www.bloomberg.com/news/articles/2018-11-16/crypto-winter-comes-early-as-bitcoin-slide-spurs-viability-fears). Seriously guys, it is the [collapse](https://www.bloomberg.com/news/articles/2018-11-15/nvidia-gives-weak-forecast-citing-inventory-stock-slumps) of cryptocurrency mining.
+Nvidia reported a drop in GPU sales for mining. This must have nothing to do with Ethereum, Zcash and others receiving ASICs for their GPU-oriented mining algorithms, but rather "it is really the canary in the coal mine for Bitcoin and other cryptocurrencies" per the experts. Seriously guys, it is the collapse of cryptocurrency mining.
 
-Ethereum Foundation is funding [efforts](https://www.coindesk.com/ethereum-foundation-filecoin-back-plan-to-make-proof-of-stake-hardware) to create ASICs that compute [Verifiable Delay Function](https://vdfresearch.org/) (VDF) as a replacement for Proof-of-Work mining for blockchain security. [This article](https://medium.com/@djrtwo/vdfs-are-not-proof-of-work-91ba3bec2bf4) compares VDF and Proof-of-Work.
+Ethereum Foundation is funding efforts to create ASICs that compute Verifiable Delay Function (VDF) as a replacement for Proof-of-Work mining for blockchain security. This article compares VDF and Proof-of-Work.
 
-Zcash [approved](https://github.com/ZcashFoundation/GrantProposals-2018Q2/issues/15#issuecomment-436106276) funding of ProgPoW prototype for Zcash. This ASIC-resistant, GPU-friendly algorithm that was also [proposed](https://proposals.decred.org/proposals/0aaab331075d08cb03333d5a1bef04b99a708dcbfebc8f8c94040ceb1676e684) in Politeia recently.
+Zcash approved funding of ProgPoW prototype for Zcash. This ASIC-resistant, GPU-friendly algorithm that was also proposed in Politeia recently.
 
 {BCH Rust impl https://news.bitcoin.com/bitcoin-cash-community-introduced-to-new-bch-library-written-in-rust/}
 
-According to [this thread](https://www.reddit.com/r/CryptoCurrency/comments/9sq0jj/shady_behavior_from_groestlcoin_grs_developers/), yet another coin with claimed ASIC resistance received an ASIC while the developers removed ASIC resistance claims from the website. Reddit thread that questioned this was [wiped out](https://archive.today/SzoHs). An instance where transparent censorship is missing. (_missed in Oct issue_)
+According to this thread, yet another coin with claimed ASIC resistance received an ASIC while the developers removed ASIC resistance claims from the website. Reddit thread that questioned this was wiped out. An instance where transparent censorship is missing. (missed in Oct issue)
 
-A paper was [published](https://www.nature.com/articles/s41558-018-0321-8) in Nature Climate journal that suggests Bitcoin PoW mining will have significant negative impact on climate change. [Discussion](https://matrix.to/#/!NKtIRqGOEGaZvSQkKl:decred.org/$15412120277994HzToF:decred.org) in #random noted serious misunderstandings of how PoW works and alarmingly low quality of the paper, along with some guesses who and why could post it.
+A paper was published in Nature Climate journal that suggests Bitcoin PoW mining will have significant negative impact on climate change. Discussion in #random noted serious misunderstandings of how PoW works and alarmingly low quality of the paper, along with some guesses who and why could post it.
 
-Zcash is [looking into](https://forum.zcashcommunity.com/t/announcing-zcash-blossom-and-proposed-feature-goals/31891) hybrid ASIC-GPU mining, among other improvements planned for next year's protocol upgrade.
+Zcash is looking into hybrid ASIC-GPU mining, among other improvements planned for next year's protocol upgrade.
 
 {governance, forks
 
 {BCH forks
-* Bitcoin Cash, born as a solution to disagreement with Bitcoin, is splitting into 2 chains (correct?). SV = Satoshi's Vision? Again?
-* (does the community split or is it a horror story by the media?)
-* explain 1) why they are forking, 2) vision and tech behind SV and ABC, 3) people, companies and capital behind both
-* what has Cobra to do with it?
-* https://www.forbes.com/sites/billybambrough/2018/11/05/looming-fork-pushed-bitcoin-cash-up-almost-40-over-the-weekend-heres-why/
-* https://news.bitcoin.com/discussions-intensify-as-bch-fork-approaches/
-* nice overview https://medium.com/circle-research/bitcoin-cash-hard-fork-report-4e4377d514a
-  * both projects get individually weaker
-  * SV is quite aggressive to ABC and hopes to dedicate some hashrate to mining empty blocks on the ABC chain (and not to secure the SV chain)
-* nice high-level overview: https://bitcoinmagazine.com/articles/when-fork-forks-what-you-need-know-bitcoin-cash-goes-war/
-* https://cash.coin.dance/ nice site for following the "hash war"
-* Live stream which ran for 8 hours with appearances from Vitalik, Emin Gun Sirer, others: https://www.youtube.com/watch?v=SxeeQ_-QVNo
-* Nice thread with resources https://www.reddit.com/r/btc/comments/9xasgg/bitcoin_cash_hard_fork_mega_thread/
-* Poloniex [allowed](https://poloniex.freshdesk.com/support/solutions/articles/1000270700-update-on-the-upcoming-bitcoin-cash-hard-fork) users to trade betwen both possible outcomes of the Bitcoin Cash fork. This led to the presence of _three_ tokens on the exchange: BCH, BCHABC nad BCHSV, with the latter two being 90% cheaper than BCH. Forks just keep spawning when you don't have a formal process to resolve disputes.
-* It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
-* contrast with how Decred works
-* https://medium.com/@carsten71071/what-are-my-options-as-a-bch-holder-before-the-upcoming-bch-hash-war-f74138b96065
-* both mining at a loss https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss
-}
 
+Bitcoin Cash, born as a solution to disagreement with Bitcoin, is splitting into 2 chains (correct?). SV = Satoshi's Vision? Again?
+(does the community split or is it a horror story by the media?)
+explain 1) why they are forking, 2) vision and tech behind SV and ABC, 3) people, companies and capital behind both
+what has Cobra to do with it?
+https://www.forbes.com/sites/billybambrough/2018/11/05/looming-fork-pushed-bitcoin-cash-up-almost-40-over-the-weekend-heres-why/
+https://news.bitcoin.com/discussions-intensify-as-bch-fork-approaches/
+nice overview https://medium.com/circle-research/bitcoin-cash-hard-fork-report-4e4377d514a
+both projects get individually weaker
+SV is quite aggressive to ABC and hopes to dedicate some hashrate to mining empty blocks on the ABC chain (and not to secure the SV chain)
+nice high-level overview: https://bitcoinmagazine.com/articles/when-fork-forks-what-you-need-know-bitcoin-cash-goes-war/
+https://cash.coin.dance/ nice site for following the "hash war"
+Live stream which ran for 8 hours with appearances from Vitalik, Emin Gun Sirer, others: https://www.youtube.com/watch?v=SxeeQ_-QVNo
+Nice thread with resources https://www.reddit.com/r/btc/comments/9xasgg/bitcoin_cash_hard_fork_mega_thread/
+Poloniex allowed users to trade betwen both possible outcomes of the Bitcoin Cash fork. This led to the presence of three tokens on the exchange: BCH, BCHABC nad BCHSV, with the latter two being 90% cheaper than BCH. Forks just keep spawning when you don't have a formal process to resolve disputes.
+It appears some forces are tearing apart Bitcoin Cash. Whatever they are, let us keep Decred resistant to them.
+contrast with how Decred works
+https://medium.com/@carsten71071/what-are-my-options-as-a-bch-holder-before-the-upcoming-bch-hash-war-f74138b96065
+both mining at a loss https://cointelegraph.com/news/bitmex-analysts-both-camps-in-bch-hash-war-are-mining-at-major-loss }
 Alternative way do resolve disputes: attack wrong chains
 
-* https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/
+https://www.ccn.com/war-bitcoin-cash-startup-launches-mining-pool-to-attack-altcoins-bch-forks/
+RChain community's is going through internal conflicts. {what is the source of controversy?} This is not the first internal conflict for RChain, since it itself was born out of a disagreement inside Synereo project which has led to a split in the past.
 
-RChain community's is going through [internal conflicts](https://joshyorndorff.com/blog/keeping-the-rchain-community-together). {what is the source of controversy?} This is not the first internal conflict for RChain, since it itself was born out of a disagreement inside Synereo project which has led to a split in the past.
+Looking at many fighting in other communities I (@bee) can't help but insert a personal comment. It appears to me that communities waste a ton of energy on all the controversies. This energy is not building value. Chain splits and community splits leave both sides with less people, less talent, and less chances to make any long term impact. It is ironic that in a space of programmed decentralized consensus systems so many people fail to come to human consensus. Decred manages to keep moving at its decent speed because it avoids external, and more importantly, internal conflicts. Let us keep incentives aligned and keep the community together. {ok or move to own blog?} }
 
-Looking at many fighting in other communities I (@bee) can't help but insert a personal comment. It appears to me that communities waste a ton of energy on all the controversies. This energy is not building value. Chain splits and community splits leave both sides with less people, less talent, and less chances to make any long term impact. It is ironic that in a space of programmed decentralized consensus systems so many people fail to come to human consensus. Decred manages to keep moving at its decent speed because it avoids external, and more importantly, internal conflicts. Let us keep incentives aligned and keep the community together. {ok or move to own blog?}
-}
+UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth] noted: "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
 
-UK government canceled a stablecoin project based on a fork of btcd. [@alexbosworth] [noted](https://twitter.com/alexbosworth/status/1056318062176145414): "The thing about stablecoins is that one day someone can come along and cancel the whole thing.".
-
-{DEX
-DEX: IDEX [decided](https://medium.com/aurora-dao/pragmatic-decentralization-how-idex-will-approach-industry-regulations-8b109212128a) to implement IP blocking and KYC, SEC [charged](https://www.sec.gov/news/press-release/2018-258) EtherDelta founder with operating an unregistered exchange.
-}
+{DEX DEX: IDEX decided to implement IP blocking and KYC, SEC charged EtherDelta founder with operating an unregistered exchange. }
 
 {related exchanges and websites
 
-Listing on a popular exchange [does not always](https://www.ccn.com/why-did-bat-lose-28-of-its-value-overnight-after-coinbase-listing/) give a good pump.
-}
+Listing on a popular exchange does not always give a good pump. }
 
 {other: regulations, security, fun
 
-http://unchainedpodcast.co/down-94-since-winter-what-has-happened-to-icos-ep91
-https://twitter.com/laurashin/status/1059791476102754305
+http://unchainedpodcast.co/down-94-since-winter-what-has-happened-to-icos-ep91 https://twitter.com/laurashin/status/1059791476102754305
 
-> @andy_bromberg and @msantoriESQ discuss why ICOs are down 90% since the winter, why airdrops could be a better than ICOs for seeding usage on networks, whether or not they're legal and which wallets to target.
+@andy_bromberg and @msantoriESQ discuss why ICOs are down 90% since the winter, why airdrops could be a better than ICOs for seeding usage on networks, whether or not they're legal and which wallets to target.
 
-Regular security reminder: SMS, and relying on mobile operators in general, is bad choice for 2FA. Good to see lawsuits [like this](https://www.coindesk.com/victims-sue-att-t-mobile-over-sim-swap-crypto-hacks/) starting but they won't get your coins back. Speaking even more generally, most smartphones have a [baseband chip](https://en.wikipedia.org/wiki/Baseband_processor) and other proprietary parts that nobody really knows what they are doing or how vulnerable they are. Keep your coins safe.
-}
+Regular security reminder: SMS, and relying on mobile operators in general, is bad choice for 2FA. Good to see lawsuits like this starting but they won't get your coins back. Speaking even more generally, most smartphones have a baseband chip and other proprietary parts that nobody really knows what they are doing or how vulnerable they are. Keep your coins safe. }
 
-## About This Issue
-
-This is the {}th issue of Decred Journal. It is available on [GitHub]({}). Past issues are available [here](https://xaur.github.io/decred-news/).
+About This Issue
+This is the {}th issue of Decred Journal. It is available on GitHub. Past issues are available here.
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
-Your feedback and contributions are welcome on [Reddit]({}), [GitHub](https://github.com/xaur/decred-news/issues) and [Matrix](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org).
+Your feedback and contributions are welcome on Reddit, GitHub and Matrix.
 
 Credits (alphabetical order): {}, {} and {}.
