--- a/journal/201904.md
+++ b/journal/201904.md
@@ -2,7 +2,15 @@
 
 ![{alt text}](../img/{file.jpg} "{hover text}")
 
-{introduction, major news of the month}
+{introduction, major news of the month
+
+* CV passed and locked in
+
+}
+
+## Upgrade your nodes!
+
+Old nodes will be forked off the network when {simple explanation}.
 
 ## Development
 
@@ -60,7 +68,11 @@ In April the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqD
 
 Proposal status as of {}:
 
-* Ghana proposal updated
+* Ghana proposal rejected by {}% No votes among {}K voted tickets. @bee posted late follow-up analysis https://www.reddit.com/r/decred/comments/b9vhee/voting_has_started_for_the_bring_decred_to_africa/eks6578/
+
+Decentralize Treasury Spending proposal attracted a lot of discussion and got featured in the news. A lot of implementation details are omitted by design:
+
+> the reason is that in the many years of software development we have learned to only plan two steps ahead and evaluate where we stand after achieving set goals. Planning too far ahead pretty much always ends with reality colliding with the plan. So, yes it is hand-wavy but by design. Once the technical realities become apparent we can let them dictate the process. ([@moo31337](https://proposals.decred.org/proposals/c96290a2478d0a1916284438ea2c59a1215fe768a87648d04d45f6b7ecb82c3f/comments/6))
 
 ## Network
 
@@ -125,7 +137,7 @@ Upcoming:
 Selected articles:
 
 * https://www.investinblockchain.com/put-your-money-where-your-mouth-is-decreds-treasury-proposal-closer-true-dae/
-* https://medium.com/@NoahPierau/69c413aa652
+* https://medium.com/@NoahPierau/unpacking-decreds-social-contract-69c413aa652
 
 Translations:
 
@@ -159,6 +171,8 @@ Comm systems news:
 
 * Servers hosting matrix.org and riot.im compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537). Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
 * Matrix is moving to stop supporting self-signed certificates and rely on Certificate Authorities to behave.
+* {someone please comment on how Telegram groups evolve and what interesting is going on}
+* Trivia: did you know there are [12 mods](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) in the Telegram group? {accurate info?}
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -191,6 +205,8 @@ QuadrigaCX declared bankrupt after months of uncertainty https://cointelegraph.c
 {other: regulations, security, fun}
 
 anti-anonymity is the main aim https://cointelegraph.com/news/g20-to-establish-crypto-aml-and-counter-terrorism-financing-regulations-in-june-report
+
+When it comes to privacy, New York Times has a good [sense of humor](https://twitter.com/Pinboard/status/1116354502032932865).
 
 ## About This Issue
 
